# article/api.go
@@ -1,31 +1,30 @@
-package api
+package article
 
 import (
 	"github.com/gin-gonic/gin"
-	"leonzhangxf-api/db"
 	"leonzhangxf-api/util"
 	"net/http"
 	"strconv"
 )
 
-type ArticleApi struct {
+type Api struct {
 }
 
 // @Summary Query published articles
 // @Description Query published articles
 // @Produce  json
-// @Success 200 {array} api.ArticleOpenDto
+// @Success 200 {array} article.OpenDto
 // @Failure 404 {string} Not found
 // @Router /open/v1/articles [get]
-func (api *ArticleApi) GetOpenArticles(context *gin.Context) {
-	articles := db.QueryPublishedArticles()
-	var articleOpenDtoList []ArticleOpenDto
+func (api *Api) GetOpenArticles(context *gin.Context) {
+	articles := QueryPublishedArticles()
+	var articleOpenDtoList []OpenDto
 	if len(articles) == 0 {
 		context.JSON(http.StatusNotFound, "Not found")
 		return
 	}
 	for _, article := range articles {
-		dto := ConvertToArticleOpenDto(&article)
+		dto := ConvertToOpenDto(&article)
 		articleOpenDtoList = append(articleOpenDtoList, *dto)
 	}
 	context.JSON(http.StatusOK, &articleOpenDtoList)
@@ -35,11 +34,11 @@ func (api *ArticleApi) GetOpenArticles(context *gin.Context) {
 // @Description Get published article by id
 // @Produce json
 // @Param id path int true "Article Id"
-// @Success 200 {object} api.ArticleOpenDto
+// @Success 200 {object} article.OpenDto
 // @Failure 400 {string} Bad article id param
 // @Failure 404 {string} Not found
 // @Router /open/v1/articles/{id} [get]
-func (api *ArticleApi) GetOpenArticleById(ctx *gin.Context) {
+func (api *Api) GetOpenArticleById(ctx *gin.Context) {
 	idParam := ctx.Param("id")
 	articleId, err := strconv.ParseInt(idParam, 10, 64)
 	if nil != err {
@@ -47,24 +46,24 @@ func (api *ArticleApi) GetOpenArticleById(ctx *gin.Context) {
 		ctx.JSON(http.StatusBadRequest, "Bad article id param")
 		return
 	}
-	article := db.GetPublishedArticleById(articleId)
+	article := GetPublishedArticleById(articleId)
 	if article.Id == 0 {
 		ctx.JSON(http.StatusNotFound, "Not found")
 		return
 	}
-	dto := ConvertToArticleOpenDto(article)
+	dto := ConvertToOpenDto(article)
 	ctx.JSON(http.StatusOK, &dto)
 }
 
 // @Summary Query articles
 // @Description Query articles, include no published articles
 // @Produce  json
-// @Success 200 {array} api.ArticleDto
+// @Success 200 {array} article.Dto
 // @Failure 404 {string} Not found
 // @Router /api/v1/articles [get]
-func (api *ArticleApi) GetArticles(context *gin.Context) {
-	articles := db.QueryArticles()
-	var articleDtoList []ArticleDto
+func (api *Api) GetArticles(context *gin.Context) {
+	articles := QueryArticles()
+	var articleDtoList []Dto
 	if len(articles) == 0 {
 		context.JSON(http.StatusNotFound, "Not found")
 		return
@@ -76,8 +75,8 @@ func (api *ArticleApi) GetArticles(context *gin.Context) {
 	context.JSON(http.StatusOK, &articleDtoList)
 }
 
-func ConvertToArticleDto(article *db.Article) *ArticleDto {
-	articleDto := &ArticleDto{}
+func ConvertToArticleDto(article *Article) *Dto {
+	articleDto := &Dto{}
 	articleDto.Id = article.Id
 	articleDto.Title = article.Title
 	articleDto.PreviewImg = article.PreviewImg
@@ -92,7 +91,7 @@ func ConvertToArticleDto(article *db.Article) *ArticleDto {
 	return articleDto
 }
 
-type ArticleDto struct {
+type Dto struct {
 	Id          int64          `json:"id" example:"1"`
 	Title       string         `json:"title" example:"文章标题"`
 	PreviewImg  string         `json:"previewImg" example:"文章预览图片"`
@@ -104,8 +103,8 @@ type ArticleDto struct {
 	GmtModified *util.JsonTime `json:"gmtModified" swaggertype:"string" example:"2006-01-02 15:04:05"`
 }
 
-func ConvertToArticleOpenDto(article *db.Article) *ArticleOpenDto {
-	articleDto := &ArticleOpenDto{}
+func ConvertToOpenDto(article *Article) *OpenDto {
+	articleDto := &OpenDto{}
 	articleDto.Id = article.Id
 	articleDto.Title = article.Title
 	articleDto.PreviewImg = article.PreviewImg
@@ -119,7 +118,7 @@ func ConvertToArticleOpenDto(article *db.Article) *ArticleOpenDto {
 	return articleDto
 }
 
-type ArticleOpenDto struct {
+type OpenDto struct {
 	Id          int64          `json:"id" example:"1"`
 	Title       string         `json:"title" example:"文章标题"`
 	PreviewImg  string         `json:"previewImg" example:"文章预览图片"`
